--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.5.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.0",
