--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest-environment-jsdom": "^29.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.43",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "ts-node": "^10.9.1"
